# todos

./: .gitignore  CmdLine.hs  Color.hs  CommandParser.hs  Config.hs  ConstrSet.hs  Dates.hs  Dot.hs  IO.hs  LICENSE  Makefile  QDL.hs  README  README.md  README.ru  Shapes.hs  TODO  TodoLoader.hs  TodoParser.hs  TodoTree.hs  Todos.hs  Types.hs  stack.yaml  todo.txt  todos.cabal  todos.hs
Todos/: CmdLine.hs  Color.hs  CommandParser.hs  Config.hs  ConfigInstances.hs  ConfigUtils.hs  Dates.hs  Default.hs  Dot.hs  Formatters.hs  IO.hs  Loader.hs  Main.hs  Parser.hs  ParserTypes.hs  Print.hs  ReadConfig.hs  Shapes.hs  TodoLoader.hs  TodoParser.hs  TodoTree.hs  Tree.hs  Types.hs  Unicode.hs
Todos/Default/: CmdLine.hs  Config.hs  Curses.hs  Instances.hs  Print.hs  Utils.hs
Todos/Dot/: Color.hs  Render.hs  Shapes.hs
